Fix flashing canvas on start; remove scrollbars on mobile; Design notebooks

--- a/misclabs.css
+++ b/misclabs.css
@@ -3,9 +3,9 @@ body{
 	color:#7a92b3;
 	text-rendering:optimizeLegibility;
 	margin:0;
-	font-size: 14pt;
+	font-size: 16pt;
 	font-family: 'Segoe UI', Arial, sans-serif;
-	font-weight:300
+	min-width:300px;
 }
 h1,h2,h3,h4,h5,h6 {
 	font-family: 'Trebuchet MS', Arial, sans-serif;
